cmake_minimum_required(VERSION 2.6)
set(ProjName OpenGLTeapot)
project(${ProjName})

find_package(OpenThreads)
find_package(osg)
find_package(osgDB)
find_package(osgUtil)
find_package(osgViewer)
find_package(glut)

macro(config_project PROJNAME LIBNAME)
	include_directories( ${${LIBNAME}_INCLUDE_DIR} )
	target_link_libraries( ${PROJNAME} ${${LIBNAME}_LIBRARY} )
endmacro()

add_executable(${ProjName} main.cpp)
config_project(${ProjName} OPENTHREADS)
config_project(${ProjName} OSG)
config_project(${ProjName} OSGDB)
config_project(${ProjName} OSGUTIL)
config_project(${ProjName} OSGVIEWER)
config_project(${ProjName} GLUT)
